Updated the web app name

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Yamah courses web site"
+      content="Namah courses web site"
     />
-    <title>Yamah</title>
+    <title>Namah</title>
   </head>
   <body>
     <div id="root"></div>
